ANALYSIS/users/mgraham/tridents/logs/RAD_HPS-EngRun2015-Nominal-v3-4_pass4.log
Traceback (most recent call last):
  File "vertexAnalysis_pass4.py", line 24, in <module>
    from  histograms import myHistograms
  File "/nfs/slac/g/hps3/users/mgraham/HPS-CODE/ANALYSIS/users/mgraham/tridents/histograms.py", line 137
    vchi2=particle.getVertexFitChi2()x
                                     ^
SyntaxError: invalid syntax

------------------------------------------------------------
Sender: LSF System <lsf@hequ0134>
Subject: Job 146534: <python vertexAnalysis_pass4.py -m True -o VertexHistograms/MC/RAD_HPS-EngRun2015-Nominal-v3-4_pass4.root /nfs/slac/g/hps3/data/engrun2015/pass4/mc/dst/RAD/*HPS-EngRun2015-Nominal-v3-4> in cluster <slac> Exited

Job <python vertexAnalysis_pass4.py -m True -o VertexHistograms/MC/RAD_HPS-EngRun2015-Nominal-v3-4_pass4.root /nfs/slac/g/hps3/data/engrun2015/pass4/mc/dst/RAD/*HPS-EngRun2015-Nominal-v3-4> was submitted from host <rhel6-64h> by user <mgraham> in cluster <slac>.
Job was executed on host(s) <hequ0134>, in queue <long>, as user <mgraham> in cluster <slac>.
</u/br/mgraham> was used as the home directory.
</u/br/mgraham/hps-analysis/tridents> was used as the working directory.
Started at Fri Feb  5 13:09:14 2016
Results reported on Fri Feb  5 13:09:15 2016

Your job looked like:

------------------------------------------------------------
# LSBATCH: User input
python vertexAnalysis_pass4.py -m True -o VertexHistograms/MC/RAD_HPS-EngRun2015-Nominal-v3-4_pass4.root /nfs/slac/g/hps3/data/engrun2015/pass4/mc/dst/RAD/*HPS-EngRun2015-Nominal-v3-4
------------------------------------------------------------

Exited with exit code 1.

Resource usage summary:

    CPU time :                                   0.37 sec.
    Total Requested Memory :                     -
    Delta Memory :                               -
    Run time :                                   1 sec.
    Turnaround time :                            1 sec.

The output (if any) is above this job summary.

